src/pages/ar-ae/v1.18.0/android-sdk/sanitization.mdx
---
title: "Android SDK - تنقية البيانات الحساسة"
metaTitle: "Android SDK - تنقية البيانات الحساسة"
metaDescription: "تفاصيل حول تنقية التسجيلات وبيانات الشبكة في متتبع Android"
---

## مكوّنات واجهة المستخدم

ستظهر طرق العرض (Views) التي تمت تنقيتها مموّهة في إعادة التشغيل الناتجة. يمكنك إضافة أي مكوّن من مكوّنات واجهة المستخدم، وسيتم إزالته تلقائيًا (للحفاظ على الذاكرة) بمجرد أن يختفي من الشاشة.

### View

```kotlin
import com.openreplay.tracker.OpenReplay

OpenReplay.addIgnoredView(view)
```

## طلبات الشبكة

يتم تصدير مفتاحين لتقليم بيانات الطلب/الاستجابة تلقائيًا: `ignoredKeys` لجسم الطلب و`ignoredHeaders` للترويسات. ستتم تنقية كلٍّ من الطلب والاستجابة، لكن لن يتأثر الجسم إلا إذا كان JSON صالحًا.

ما عليك سوى تعيين قائمة من السلاسل النصية التي ترغب في تنقيتها:

```kotlin
val networkListener = NetworkListener()
networkListener.ignoredHeaders = ["mySecretToken"]
networkListener.ignoredKeys = ["password"]
```

من الممكن أيضًا تغيير بيانات الاستجابة قبل تمريرها إلى المستمع (listener):

```kotlin
// ... request

var sanitizedData: Any? = null
data?.let {
    try {
        val json = JSONTokener(it).nextValue()
        sanitizedData = customSanitizeFunction(it)
        println(json)
    } catch (error: JSONException) {
        println("Error deserializing JSON: $error")
    }
}

networkListener.finish(response, sanitizedData)
```

## هل لديك أسئلة؟
إذا كانت لديك أي أسئلة حول هذه العملية، فلا تتردد في التواصل معنا عبر [Slack](https://slack.openreplay.com) الخاص بنا أو الاطلاع على [المنتدى](https://forum.openreplay.com) الخاص بنا.
